Fix tile positions on small screen devices

--- a/style/9x9.css
+++ b/style/9x9.css
@@ -1244,7 +1244,7 @@ hr {
     margin-top: 15px; }
 
   .container {
-    width: 280px;
+    width: 345px;
     margin: 0 auto; }
 
   .score-container, .best-container {
@@ -1265,8 +1265,8 @@ hr {
     -moz-user-select: none;
     background: #bbada0;
     border-radius: 6px;
-    width: 280px;
-    height: 280px;
+    width: 345px;
+    height: 345px;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box; }
@@ -1374,6 +1374,10 @@ hr {
   -webkit-transform: translate(0px, 231px);
   -moz-transform: translate(0px, 231px);
   transform: translate(0px, 231px); }
+.tile.tile-position-1-9 {
+  -webkit-transform: translate(0px, 264px);
+  -moz-transform: translate(0px, 264px);
+  transform: translate(0px, 264px); }
 .tile.tile-position-2-1 {
   -webkit-transform: translate(33px, 0px);
   -moz-transform: translate(33px, 0px);
@@ -1406,6 +1410,10 @@ hr {
   -webkit-transform: translate(33px, 231px);
   -moz-transform: translate(33px, 231px);
   transform: translate(33px, 231px); }
+.tile.tile-position-2-9 {
+  -webkit-transform: translate(33px, 264px);
+  -moz-transform: translate(33px, 264px);
+  transform: translate(33px, 264px); }
 .tile.tile-position-3-1 {
   -webkit-transform: translate(66px, 0px);
   -moz-transform: translate(66px, 0px);
@@ -1438,6 +1446,10 @@ hr {
   -webkit-transform: translate(66px, 231px);
   -moz-transform: translate(66px, 231px);
   transform: translate(66px, 231px); }
+.tile.tile-position-3-9 {
+  -webkit-transform: translate(66px, 264px);
+  -moz-transform: translate(66px, 264px);
+  transform: translate(66px, 264px); }
 .tile.tile-position-4-1 {
   -webkit-transform: translate(99px, 0px);
   -moz-transform: translate(99px, 0px);
@@ -1470,6 +1482,10 @@ hr {
   -webkit-transform: translate(99px, 231px);
   -moz-transform: translate(99px, 231px);
   transform: translate(99px, 231px); }
+.tile.tile-position-4-9 {
+  -webkit-transform: translate(99px, 264px);
+  -moz-transform: translate(99px, 264px);
+  transform: translate(99px, 264px); }
 .tile.tile-position-5-1 {
   -webkit-transform: translate(132px, 0px);
   -moz-transform: translate(132px, 0px);
@@ -1502,6 +1518,10 @@ hr {
   -webkit-transform: translate(132px, 231px);
   -moz-transform: translate(132px, 231px);
   transform: translate(132px, 231px); }
+.tile.tile-position-5-9 {
+  -webkit-transform: translate(132px, 264px);
+  -moz-transform: translate(132px, 264px);
+  transform: translate(132px, 264px); }
 .tile.tile-position-6-1 {
   -webkit-transform: translate(165px, 0px);
   -moz-transform: translate(165px, 0px);
@@ -1534,6 +1554,10 @@ hr {
   -webkit-transform: translate(165px, 231px);
   -moz-transform: translate(165px, 231px);
   transform: translate(165px, 231px); }
+.tile.tile-position-6-9 {
+  -webkit-transform: translate(165px, 264px);
+  -moz-transform: translate(165px, 264px);
+  transform: translate(165px, 264px); }
 .tile.tile-position-7-1 {
   -webkit-transform: translate(198px, 0px);
   -moz-transform: translate(198px, 0px);
@@ -1566,6 +1590,10 @@ hr {
   -webkit-transform: translate(198px, 231px);
   -moz-transform: translate(198px, 231px);
   transform: translate(198px, 231px); }
+.tile.tile-position-7-9 {
+  -webkit-transform: translate(198px, 264px);
+  -moz-transform: translate(198px, 264px);
+  transform: translate(198px, 264px); }
 .tile.tile-position-8-1 {
   -webkit-transform: translate(231px, 0px);
   -moz-transform: translate(231px, 0px);
@@ -1598,6 +1626,46 @@ hr {
   -webkit-transform: translate(231px, 231px);
   -moz-transform: translate(231px, 231px);
   transform: translate(231px, 231px); }
+.tile.tile-position-8-9 {
+  -webkit-transform: translate(231px, 264px);
+  -moz-transform: translate(231px, 264px);
+  transform: translate(231px, 264px); }
+.tile.tile-position-9-1 {
+  -webkit-transform: translate(264px, 0px);
+  -moz-transform: translate(264px, 0px);
+  transform: translate(264px, 0px); }
+.tile.tile-position-9-2 {
+  -webkit-transform: translate(264px, 33px);
+  -moz-transform: translate(264px, 33px);
+  transform: translate(264px, 33px); }
+.tile.tile-position-9-3 {
+  -webkit-transform: translate(264px, 66px);
+  -moz-transform: translate(264px, 66px);
+  transform: translate(264px, 66px); }
+.tile.tile-position-9-4 {
+  -webkit-transform: translate(264px, 99px);
+  -moz-transform: translate(264px, 99px);
+  transform: translate(264px, 99px); }
+.tile.tile-position-9-5 {
+  -webkit-transform: translate(264px, 132px);
+  -moz-transform: translate(264px, 132px);
+  transform: translate(264px, 132px); }
+.tile.tile-position-9-6 {
+  -webkit-transform: translate(264px, 165px);
+  -moz-transform: translate(264px, 165px);
+  transform: translate(264px, 165px); }
+.tile.tile-position-9-7 {
+  -webkit-transform: translate(264px, 198px);
+  -moz-transform: translate(264px, 198px);
+  transform: translate(264px, 198px); }
+.tile.tile-position-9-8 {
+  -webkit-transform: translate(264px, 231px);
+  -moz-transform: translate(264px, 231px);
+  transform: translate(264px, 231px); }
+.tile.tile-position-9-9 {
+  -webkit-transform: translate(264px, 264px);
+  -moz-transform: translate(264px, 264px);
+  transform: translate(264px, 264px); }
 
   .game-container {
     margin-top: 20px; }
